# tiger21-agents

./: .dockerignore  .env  .env.example  CLAUDE.md  Dockerfile  MIGRATION_NOTES.md  README_CREWAI.md  cloudbuild.yaml  config.py  deploy.sh  main.py  package-lock.json  package.json  pyproject.toml  test_setup.py
backend/: .env  OPTIMIZATIONS.md  README.md  __init__.py  adk_app_wrapper.py  agent.py  agent_engine_app.py  agent_engine_config.json  deal_sourcing_agent.py  deploy_agent.py  deploy_agent_engine_fixed.py  deploy_simple_agent.py  deploy_to_agent_engine.py  optimized_prompts.py  parallel_agent.py  pdf_agent.py  prompt.py  proper_test.py  pyproject.toml  reasoning_engine_app.py  reasoning_engine_wrapper.py  simple_agent.py  test_agent_engine.py  test_deployed_agent.py  ultra_fast_agent.py
backend/agents/: __init__.py  agent.py  agent_engine_app.py  root_agent.yaml
backend/agents/deployment/: deploy.py
backend/agents/sub_agents/deal_coordinator_agent/: __init__.py  prompt.py
backend/agents/sub_agents/financial_news_agent/: __init__.py  agent.py  prompt.py
backend/agents/sub_agents/real_estate_agent/: prompt.py
backend/agents/tests/: test_agents.py
backend/utils/: __init__.py  async_pdf.py  pdf_generator.py  search_optimizer.py
frontend/: .dockerignore  .env  .gcloudignore  .gitignore  App.tsx  CONFIG.md  Dockerfile  README.md  README_DEPLOYMENT.md  app.yaml  cloudbuild.yaml  deploy.sh  index.css  index.html  package-lock.json  package.json  server.js  vite.config.ts
frontend/api/: agent.js
functions/: README.md  deploy-all.sh
src/: crew.py
(+33 files in other folders)
